replaced paypal plugin with a more supported and better coded plugin, added pending user counter to the wp admin bar and removed the unnecessary items from the bar

--- a/wp-content/themes/educenter.1.1.2/educenter-child/style.css
+++ b/wp-content/themes/educenter.1.1.2/educenter-child/style.css
@@ -136,3 +136,12 @@ div.bottom-footer.clearfix {
     padding-left: 10px;
     padding-right: 10px;
 }
+
+span#bubble_count {
+
+	background-color: #3ba1da;;
+	color: #eee;
+	border-radius: 100%;
+	padding: 0px 4px;
+	text-align: center;
+}
