Removed request mentorship button if displayed user is already current users mentor, created seperation between your mentors and mentor matches, matching users by strenghts and weaknesses, added counter to Mentor MatchMaker menu items for pending requests.

--- a/wp-content/themes/educenter.1.1.2/educenter-child/style.css
+++ b/wp-content/themes/educenter.1.1.2/educenter-child/style.css
@@ -141,7 +141,7 @@ span#bubble_count {
 
 	background-color: #3ba1da;;
 	color: #eee;
-	border-radius: 100%;
-	padding: 0px 4px;
+	border-radius: 9px;
+	padding: 0px 5px;
 	text-align: center;
 }
